# genome-blender

./: .gitignore  CLAUDE.md  README.md  example_config.yaml  generate_reads.py  pyproject.toml
.claude/: settings.local.json
containers/bifrost/: Dockerfile
containers/biogrinder/: Dockerfile
containers/cuttlefish3/: Dockerfile
docs/: minimizer_graph_pipeline.md
genome_blender/: __init__.py  _progress.py  _utils.py  cli.py  error_model.py  fragments.py  genomes.py  io.py  models.py  reads.py
genome_blender_core/: Cargo.toml  pyproject.toml
notebooks/: parse_gfa_exploration.ipynb
scripts/: .parse_gfa.py.swp  .run_rust_mdbg.sh.swp  asf_sample.py  estimate_insert_size_pe_combo.py  fit_insert_size.py  parse_gfa.py  pe_path_sample.py  plot_path_bin_pe_counts.py  read_minimizers.py  reads_summary.py  reconstruct_sequences.py  run_asf_sample.sh  run_bifrost.sh  run_cuttlefish3.sh  run_greedy_insert_size.sh  run_greedy_insert_size_fitting_only.sh  run_megahit.sh  run_metaMDBG.sh  run_only_asf_sample.sh  run_pe_path_sample.sh  run_reconstruct_sequences.sh  run_rust_mdbg.sh  run_spades.sh  run_spades_raw.sh
scripts/noodle/: Cargo.toml  NOODLE.md
scripts/noodle/src/: bloom.rs  cli.rs  fastq.rs  main.rs  minimizers.rs  nthash.rs
scripts/noodle/src/view/: combo.rs  minim.rs  mod.rs  reads.rs
scripts/noodle/tests/: build_test.rs  view_test.rs
scripts/noodle/tests/fixtures/: tiny_R1.fastq  tiny_R2.fastq
tests/: conftest.py  test_asf_sample.py  test_e2e.py  test_integration.py  test_parse_gfa.py  test_reads_summary.py  test_unit.py
(+5 files in other folders)
