[package]
name = "noodle"
version = "0.1.0"
edition = "2021"
description = "LMDB index builder for minimizer-space metagenome analysis"

[[bin]]
name = "noodle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lmdb = "0.8"
lmdb-sys = "0.8"
flate2 = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
